--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,12 +2,21 @@
     RewriteEngine On
     RewriteBase /
 
-    # Redirect all traffic to index.html
-    RewriteCond %{REQUEST_URI} !/index\.html$ [NC]
-    RewriteCond %{REQUEST_URI} !\.(jpg|jpeg|png|gif|css|js|woff|woff2|ttf|otf|svg|eot)$ [NC]
-    RewriteRule ^.*$ /index.html [R=302,L]
+    # Redirect root to /home
+    RewriteCond %{REQUEST_URI} ^/$
+    RewriteRule ^ /home [R=301,L]
 
-    # Allow access to the index page
+    # Redirect explicitly typed index.html to /home
+    RewriteCond %{THE_REQUEST} \s/index\.html [NC]
+    RewriteRule ^index\.html$ /home [R=301,L]
+
+    # Redirect all non-file/directory requests to index.html
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.html [L]
+
+    # Set the default directory index
     DirectoryIndex index.html
 </IfModule>
+
 
