--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,21 +2,12 @@
     RewriteEngine On
     RewriteBase /
 
-    # Redirect root to /home
-    RewriteCond %{REQUEST_URI} ^/$
-    RewriteRule ^ /home [R=301,L]
+    # Redirect all traffic to index.html
+    RewriteCond %{REQUEST_URI} !/index\.html$ [NC]
+    RewriteCond %{REQUEST_URI} !\.(jpg|jpeg|png|gif|css|js|woff|woff2|ttf|otf|svg|eot)$ [NC]
+    RewriteRule ^.*$ /index.html [R=302,L]
 
-    # Redirect explicitly typed index.html to /home
-    RewriteCond %{THE_REQUEST} \s/index\.html [NC]
-    RewriteRule ^index\.html$ /home [R=301,L]
-
-    # Redirect all non-file/directory requests to index.html
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^ index.html [L]
-
-    # Set the default directory index
+    # Allow access to the index page
     DirectoryIndex index.html
 </IfModule>
-
 
